# superpanels

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PLAN.md  README.md  SPEC.md  clippy.toml  deny.toml  install.sh  justfile  rust-toolchain.toml  rustfmt.toml  superpanels.gpg  typos.toml
.cargo/: config.toml
.claude/skills/agent-team/: SKILL.md
.claude/skills/agent-team/references/: architecture-reviewer.md  code-reviewer.md  implementer.md  performance-reviewer.md  (+2 more)
.github/: CODEOWNERS
.github/workflows/: cache-warm.yml  ci.yml  release.yml
crates/superpanels-cli/: Cargo.toml
crates/superpanels-cli/src/: ipc_client.rs  main.rs  monitor_cmd.rs  profile_cmd.rs  schedule_cmd.rs  set_cmd.rs
crates/superpanels-cli/tests/: hello.rs
crates/superpanels-core/: Cargo.toml
crates/superpanels-core/benches/: gnome.rs  image.rs  layout.rs  library.rs
crates/superpanels-core/proptest-regressions/: layout.txt
crates/superpanels-core/src/: backends.rs  config.rs  display.rs  image.rs  ipc.rs  layout.rs  lib.rs  library.rs  resume.rs  schedule.rs  slideshow.rs  validity.rs
crates/superpanels-core/src/backends/: custom.rs  feh.rs  gnome.rs  hyprland.rs  kde.rs  mock.rs  subprocess.rs  sway.rs
crates/superpanels-core/src/config/: default.rs  io.rs  merge.rs  monitor_edit.rs  profile.rs  validate.rs
crates/superpanels-core/src/display/: hyprctl.rs  kscreen.rs  manual.rs  stable_id.rs  subprocess.rs  wlr_randr.rs  xrandr.rs
crates/superpanels-core/src/display/snapshots/: superpanels_core__display__kscreen__tests__single_monitor_fixture_parses_to_expected_layout.snap  superpanels_core__display__kscreen__tests__three_monitor_fixture_parses_to_expected_layout.snap
crates/superpanels-core/src/image/: temp.rs
crates/superpanels-core/src/ipc/: client.rs  validate.rs
crates/superpanels-core/src/layout/: algorithm.rs
crates/superpanels-core/tests/: backend_pipeline.rs  image_pipeline.rs
crates/superpanels-core/tests/fixtures/display/: hyprctl-2-monitors.json  kscreen-1-monitor.txt  kscreen-3-monitors.txt  wlr-randr-2-monitors.json  xrandr-2-monitors.txt
crates/superpanels-daemon/: Cargo.toml
crates/superpanels-daemon/src/: apply.rs  daemonize.rs  display_watch.rs  main.rs  pool.rs  schedule.rs  server.rs  state.rs  thumbnail_cache.rs  timer.rs  unit.rs  watcher.rs
crates/superpanels-daemon/src/server/: apply.rs  frame.rs  handlers.rs  helpers.rs  slideshow.rs
crates/superpanels-daemon/src/server/handlers/: library.rs
crates/superpanels-gui/: Cargo.toml  desktop-entry.hbs  tauri.conf.json
crates/superpanels-gui/capabilities/: default.json
crates/superpanels-gui/src/: autostart.rs  bridge.rs  commands.rs  desktop_entry.rs  dmabuf.rs  errors.rs  ipc_client.rs  lib.rs  main.rs  notifications.rs  resize_borders.rs  state.rs  tray.rs  window_chrome.rs  window_lifecycle.rs  window_state.rs
crates/superpanels-gui/src/commands/: about.rs  autostart.rs  config.rs  daemon.rs  in_process.rs  library.rs  monitors.rs  preview.rs  profiles.rs  runtime.rs  slideshow.rs  tray.rs  window.rs
crates/superpanels-gui/src/tray/: icon.rs
crates/superpanels-gui/src/window_chrome/: native.rs
docs/: architecture.md  followups.md  install.md  release-checklist.md  style-frontend.md  style-rust.md  testing.md  ui-polish.md
docs/contributing/: architecture.md  style-frontend.md  style-rust.md  testing.md
docs/design/: profiles-ui-brief.md
docs/plan/: README.md  cross-cutting.md  decisions.md  first-commits.md  phase-0-spike.md  phase-1-core-cli.md  phase-2-multi-backend.md  phase-3-tauri-tray.md  phase-4a-canvas.md  phase-4b-library.md  phase-4c-free-positioning.md  phase-4c-polish.md  phase-4d-polish.md  phase-4e-profiles.md  phase-5-packaging.md  phase-6-stabilisation.md  principles.md  risks.md
docs/reference/: backends.md  configuration.md  displays.md  layout-math.md  security.md
docs/release/: packaging.md  release-checklist.md  stabilisation.md
docs/spec/: 01-goals.md  02-personas.md  03-core-concepts.md  04-bezel-math.md  05-architecture.md  06-detection.md  07-library.md  08-image-processing.md  09-profiles-schedules.md  10-backends.md  11-cli.md  12-gui.md  13-tray.md  14-config-state.md  15-logging.md  16-errors.md  17-security.md  18-a11y-i18n.md  19-performance.md  20-testing.md  21-packaging.md  22-out-of-scope.md  23-open-questions.md  README.md
packaging/: README.md  assemble-release.sh  set-version.sh  superpanels-autostart.desktop  superpanels-gui.desktop
packaging/aur-superpanels/: .SRCINFO  PKGBUILD
packaging/pacman-repo/: PKGBUILD  publish.sh
scripts/: reset-local-data.sh
tests/fixtures/display/: kscreen-3-monitors.txt  monitor-dimensions.md
ui/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
ui/src/: App.svelte  app.css  main.ts
ui/src/components/: CanvasOverlayChrome.svelte  Icon.svelte  LibraryGrid.svelte  LibraryPane.svelte  MonitorCanvas.svelte  MonitorPopout.svelte  ProfileEditor.svelte  ProfileList.svelte  SettingsPane.svelte  Sidebar.svelte  Toast.svelte
ui/src/lib/: actions.test.ts  actions.ts  api.ts  dock-breakpoints.ts  keymap.ts  portal.ts  profile-colours.ts  profile-swatch.test.ts  profile-thumb.test.ts  profile-thumb.ts  profile-topology.ts  profileSwatch.test.ts  profileSwatch.ts  slideshow-controller.svelte.ts  slideshow-overrides.ts  slideshow-set.test.ts  slideshow-set.ts  topology.ts  window-drag.test.ts  window-drag.ts
x86_64/: superpanels-bin-0.3.0-1-x86_64.pkg.tar.zst.sig  superpanels-bin-0.4.0-1-x86_64.pkg.tar.zst.sig  superpanels-bin-0.5.0-1-x86_64.pkg.tar.zst.sig  superpanels-bin-0.6.0-1-x86_64.pkg.tar.zst.sig  superpanels-bin-0.6.1-1-x86_64.pkg.tar.zst.sig  superpanels-bin-0.6.2-1-x86_64.pkg.tar.zst.sig  superpanels-bin-0.6.3-1-x86_64.pkg.tar.zst.sig  superpanels.db  superpanels.db.sig  superpanels.db.tar.gz.sig  superpanels.files  superpanels.files.sig  superpanels.files.tar.gz.sig
(+174 files in other folders)
