[workspace]
resolver = "3"
members = [
    "crates/superpanels-core",
    "crates/superpanels-cli",
    "crates/superpanels-daemon",
    "crates/superpanels-gui",
]

[workspace.package]
version      = "0.0.0"
edition      = "2024"
rust-version = "1.85"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/alex/superpanels"
authors      = ["Alex Sandilands <profile.alex@proton.me>"]

[workspace.lints.rust]
unsafe_code        = "forbid"        # we forbid unsafe — `forbid` is stronger than `deny`
# missing_docs deliberately not enforced: docs are added when the *why* is
# non-obvious, not as a per-item ritual. See docs/style-rust.md §Comments.
# Lint groups need an explicit lower priority so individual lints in the same
# table can coexist (cargo enforces this since Rust 1.95).
unused             = { level = "warn", priority = -1 }
nonstandard_style  = { level = "warn", priority = -1 }
rust_2018_idioms   = { level = "warn", priority = -1 }
unreachable_pub    = "warn"
trivial_casts      = "warn"
trivial_numeric_casts = "warn"

[workspace.lints.clippy]
# Tier 1: catch real bugs and style issues.
all      = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

# Things we want to be loud about:
unwrap_used     = "warn"
expect_used     = "warn"
panic           = "warn"
todo            = "warn"
unimplemented   = "warn"
dbg_macro       = "warn"
print_stdout    = "warn"
print_stderr    = "warn"   # use `tracing` or `eprintln!` only in CLI top-level
mod_module_files = "warn"  # enforce module.rs over mod.rs

# Pedantic lints that are noisy without being useful — selectively allow.
module_name_repetitions = "allow"
must_use_candidate      = "allow"
missing_errors_doc      = "allow"
missing_panics_doc      = "allow"
return_self_not_must_use = "allow"

[workspace.dependencies]
# Declared here so commits 2+ can pull them in via `dep.workspace = true`.
# None are wired into a per-crate `[dependencies]` block yet.
anyhow             = "1.0.102"
base64             = "0.22"
chrono             = "0.4"
clap               = { version = "4.6.1", features = ["derive"] }
cron               = "0.12"
image              = { version = "0.25.10", default-features = false }
notify             = "8"
rand               = "0.9"
rayon              = "1.10"
serde              = { version = "1.0.228", features = ["derive"] }
serde_json         = "1.0.149"
sha2               = "0.10"
thiserror          = "2.0.18"
toml               = "1.1.2"
toml_edit          = "0.25.11"
tokio              = { version = "1", features = ["rt-multi-thread", "net", "time", "signal", "macros", "io-util", "sync"] }
tracing            = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
zbus               = "5.11.0"

# GUI (Phase 3) — Tauri shell + tray + notifications + TS type bindings.
tauri                     = { version = "2.10", default-features = false, features = ["custom-protocol", "tray-icon", "wry", "image-png", "config-json5"] }
tauri-build               = { version = "2.5", default-features = false }
tauri-plugin-dialog       = "2.7"
tauri-plugin-fs           = "2.5"
tauri-plugin-notification = "2.3"
notify-rust               = "4.16"
ts-rs                     = { version = "12.0", features = ["serde-json-impl"] }

# Test-only dependencies (used via `dev-dependencies` in individual crates).
criterion          = { version = "0.5", features = ["html_reports"] }
insta              = "1.43.2"
proptest           = "1.11.0"
tempfile           = "3.14.0"
