[package]
name         = "superpanels-core"
description  = "Pure-logic core for the Superpanels wallpaper manager."
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[dependencies]
image      = { workspace = true, features = ["jpeg", "png", "webp"] }
serde      = { workspace = true }
serde_json = { workspace = true }
thiserror  = { workspace = true }
toml       = { workspace = true }
toml_edit  = { workspace = true }
tracing    = { workspace = true }
zbus       = { workspace = true }

[dev-dependencies]
criterion = { workspace = true }
image     = { workspace = true, features = ["jpeg", "png", "webp"] }
insta     = { workspace = true }
proptest  = { workspace = true }
tempfile  = { workspace = true }

[[bench]]
name    = "layout"
harness = false

[lints]
workspace = true
