[package]
name         = "superpanels-daemon"
description  = "Background daemon for the Superpanels wallpaper manager."
default-run  = "superpanels-daemon"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "superpanels-daemon"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
superpanels-core   = { path = "../superpanels-core", version = "=0.0.0" }
anyhow             = { workspace = true }
base64             = { workspace = true }
chrono             = { workspace = true }
clap               = { workspace = true }
cron               = { workspace = true }
image              = { workspace = true, features = ["jpeg", "png", "webp"] }
serde              = { workspace = true }
serde_json         = { workspace = true }
thiserror          = { workspace = true }
notify             = { workspace = true }
tokio              = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
# Used by display_watch to subscribe to the KDE kscreen kded `configChanged`
# signal so an OS-driven rotation is reflected without polling.
zbus               = { workspace = true }
futures-util       = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
