[package]
name         = "superpanels-gui"
description  = "Tauri shell for the Superpanels wallpaper manager."
default-run  = "superpanels-gui"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "superpanels-gui"
path = "src/main.rs"

[lints]
workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
superpanels-core           = { path = "../superpanels-core", version = "=0.0.0" }
anyhow                     = { workspace = true }
base64                     = { workspace = true }
image                      = { workspace = true, features = ["jpeg", "png", "webp"] }
notify-rust                = { workspace = true }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
tauri                      = { workspace = true }
tauri-plugin-dialog        = { workspace = true }
tauri-plugin-fs            = { workspace = true }
tauri-plugin-notification  = { workspace = true }
thiserror                  = { workspace = true }
tokio                      = { workspace = true }
tracing                    = { workspace = true }
tracing-subscriber         = { workspace = true }
ts-rs                      = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
