[package]
name         = "superpanels-gui"
description  = "Tauri shell for the Superpanels wallpaper manager."
default-run  = "superpanels-gui"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
repository.workspace   = true
authors.workspace      = true

[[bin]]
name = "superpanels-gui"
path = "src/main.rs"

[lints]
workspace = true

[features]
# Enables Tauri's devtools (Ctrl+Shift+I, right-click → Inspect). Off in
# release builds; opt in locally with `cargo run --features dev-tools`.
dev-tools = ["tauri/devtools"]

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
superpanels-core           = { path = "../superpanels-core", version = "=0.0.0" }
anyhow                     = { workspace = true }
base64                     = { workspace = true }
image                      = { workspace = true, features = ["jpeg", "png", "webp"] }
serde                      = { workspace = true }
serde_json                 = { workspace = true }
tauri                      = { workspace = true }
tauri-plugin-dialog        = { workspace = true }
tauri-plugin-fs            = { workspace = true }
tauri-plugin-notification  = { workspace = true }
tauri-plugin-opener        = { workspace = true }
tauri-plugin-single-instance = { workspace = true }
thiserror                  = { workspace = true }
tokio                      = { workspace = true }
tracing                    = { workspace = true }
tracing-subscriber         = { workspace = true }
ts-rs                      = { workspace = true }

# GTK is already in the tree via tauri; we take a direct handle on it to install
# the undecorated window's resize borders (see `resize_borders.rs`).
[target.'cfg(target_os = "linux")'.dependencies]
gtk = { version = "0.18", features = ["v3_24"] }

[dev-dependencies]
tempfile = { workspace = true }
